@@ -1749,6 +1749,15 @@ energy at a target, while others only apply to the \
 bard.  For help on a particular song, enter help \
 and then the name of the song.
 
+SATIRE=<ABILITY>\
+Usage    : SATIRE [TARGET NAME]\n\r\
+Example  : satire cityguard\n\r\
+This ability allows the bard to playfully mock and shame an officer of the law \
+satirically, to his face.  Any group members (other than him or herself) wanted \
+for a crim in that area may be forgiven one warrant if the satire is successful. \
+Unsuccessful satire will get the bard in trouble with the law.  Even successful \
+satire will occasionally cause trouble for the bard, depending on the bard's charisma.
+
 SAFEHOUSE=<ABILITY>\
 Usage    : SAFEHOUSE\n\r\
 Example  : safehouse\n\r\
