@@ -2342,3 +2342,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 5. First addition to stock raw resource list in forever (dragonscales, white gold, etc..)
 6. GMODIFY can now alter room/locale-type objects as well (global room title changes anyone?)
 7. MUDGrinder supports editing/deleting multiple rooms using cntrl-click.
+8. New Jester skill: Satire
